treewide refactoring:
Remove serialVersionUID.
Use LocalPreferences pref field.
Extract SparkManager.mucManager, discoManager, and use SparkManager.sessionManager.privateDataManager to reduce direct usage of connection.
Reformat and use modern java syntax.